--- a/experiments/algo_plots.ipynb
+++ b/experiments/algo_plots.ipynb
@@ -30,26 +30,29 @@
     "loaded_models = []\n",
     "\n",
     "experiments_to_read = {\n",
-    "    'SGD': {\n",
-    "        'unconstrained': 0.05\n",
-    "    },\n",
-    "    'SSG': {\n",
-    "        \"loss_equality\": 0.005\n",
-    "    },\n",
+    "    # 'SGD': {\n",
+    "    #     'unconstrained': 0.05\n",
+    "    # },\n",
+    "    # 'SSG': {\n",
+    "    #     \"loss_equality\": 0.005\n",
+    "    # },\n",
     "    'SSLALM': {\n",
-    "        \"loss_equality\": 0.005\n",
+    "        \"loss_equality\": 0.005,\n",
+    "        \"abs_diff_pr\": 0.05\n",
     "    },\n",
     "    'StochasticGhost': {\n",
-    "        'loss_equality': 0.005\n",
+    "        'loss_equality': 0.005,\n",
+    "        \"abs_diff_pr\": 0.05\n",
     "    },\n",
-    "    'TorchSSG': {\n",
-    "        # \"abs_max_dev_from_overall_tpr\": 0.03,\n",
-    "        # \"abs_diff_pr\": 0.05\n",
-    "    },\n",
-    "    'TorchSSLALM': {\n",
-    "        # \"abs_max_dev_from_overall_tpr\": 0.03,\n",
-    "        # \"abs_diff_pr\": 0.05\n",
-    "    },\n",
+    "    # 'TorchSSG': {\n",
+    "    #     # \"abs_max_dev_from_overall_tpr\": 0.03,\n",
+    "    #     # \"abs_diff_pr\": 0.05\n",
+    "    # },\n",
+    "    # 'TorchSSLALM': {\n",
+    "    #     'loss_equality': 0.005\n",
+    "    #     # \"abs_max_dev_from_overall_tpr\": 0.03,\n",
+    "    #     # \"abs_diff_pr\": 0.05\n",
+    "    # },\n",
     "}"
    ]
   },
@@ -159,66 +162,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "---\n",
-    "**Plot w.r.t. time**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils.plotting import plot_time\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "# alg_name = \"TorchSSLALM\"\n",
-    "# c = \"abs_diff_pr\"\n",
-    "alg_name = \"SSLALM\"\n",
-    "c = \"loss_equality\"\n",
-    "cb = 0.005\n",
-    "alg = f\"{alg_name}__{c}__{cb}\"\n",
-    "\n",
-    "data = data_train[alg]\n",
-    "\n",
-    "fl = plot_time(\n",
-    "    data,\n",
-    "    cb,\n",
-    "    loss_col='f_full',\n",
-    "    c_col='c_full0_corrected',\n",
-    "    two_sided=True,\n",
-    "    round_step=0.07,\n",
-    "    f_ylim=(0.35, 0.77),\n",
-    "    c_ylim=(-0.2, 0.2),\n",
-    "    sep_figs=False,\n",
-    "    add_lb=False,\n",
-    "    q1=0.25,\n",
-    "    q2=0.75,\n",
-    "    plot_loss=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Plot trajectories of each run w.r.t. iterations**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "group_names = ['Mar', 'Wid', 'Div', 'Sep', 'Nev']"
+    "---"
    ]
   },
   {
@@ -230,23 +174,18 @@
     "from utils.plotting import plot_sep, groupby_time\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "# alg_name = \"TorchSSG\"\n",
-    "# c = \"abs_diff_pr\"\n",
-    "alg_name = \"SGD\"\n",
-    "c = \"unconstrained\"\n",
+    "experiments = {\n",
+    "    (\"StochasticGhost\", \"abs_diff_pr\", 0.05),\n",
+    "    (\"SSLALM\", \"abs_diff_pr\", 0.05)\n",
+    "}\n",
+    "n_constraints = 1\n",
     "\n",
-    "colors1 = plt.cm.cividis(np.linspace(0,1, 5))\n",
-    "colors2 = plt.cm.viridis(np.linspace(0, 1, 5))\n",
-    "colors3 = plt.cm.magma(np.linspace(0, 1, 5))\n",
+    "n_rows = len(experiments)\n",
+    "n_cols = n_constraints+1\n",
     "\n",
-    "colors = [colors1, colors2, colors3]\n",
     "\n",
-    "f, ax = plt.subplots(3,6)\n",
-    "for n, (alg_name, c) in enumerate([\n",
-    "    ('SGD','unconstrained'),\n",
-    "    ('TorchSSLALM','abs_diff_pr'),\n",
-    "    ('TorchSSG','abs_diff_pr')\n",
-    "    ]):\n",
+    "f, ax = plt.subplots(n_rows,n_cols)\n",
+    "for n, (alg_name, c, cb) in enumerate(experiments):\n",
     "\n",
     "    alg = f\"{alg_name}__{c}__{cb}\"\n",
     "    data = data_train[alg]\n",
@@ -254,32 +193,25 @@
     "        _ = groupby_time(\n",
     "            data = data,\n",
     "            round_step=0.01)\n",
-    "        # data['time_r'] = df['time_r'].mean().to_numpy()\n",
     "    print(alg)\n",
     "        \n",
     "\n",
     "    cb = 0.05\n",
     "    if isinstance(ax, plt.Axes):\n",
     "        ax = [ax]\n",
-    "    # ax_f = plot_sep(data, plot_col='f_full', idx_col='trial')\n",
-    "    # ax_f.axes[0].set_ylim(0.4,0.72)\n",
-    "    # ax_f.set_figwidth(20)\n",
-    "    for i in range(6):\n",
+    "    for i in range(n_rows):\n",
     "        ax = f.axes[i\n",
-    "                    +6*n\n",
+    "                    +n_rows*n\n",
     "                    ]\n",
     "        if i == 0:\n",
-    "            plot_sep(data, plot_col='f_full', x_col='time_r', idx_col='trial', ax=ax)#, colors=colors[n])\n",
+    "            plot_sep(data, plot_col='f_full', x_col='time_r', idx_col='trial', ax=ax)\n",
     "        else:\n",
-    "            plot_sep(data, plot_col=f'c_full{i-1}_corrected', x_col='time_r', idx_col='trial', ax=ax)#, colors=colors[n])\n",
-    "        # ax.set_xticklabels(labels=np.arange())\n",
-    "        ax.set_xticks(np.arange(0, 70, 10))\n",
+    "            plot_sep(data, plot_col=f'c_full{i-1}_corrected', x_col='time_r', idx_col='trial', ax=ax)\n",
     "    f.set_figwidth(30)\n",
     "    f.set_figheight(15)\n",
-    "    # f.suptitle(alg_name)\n",
-    "    for i in range(6):\n",
+    "    for i in range(n_rows):\n",
     "        ax = f.axes[i\n",
-    "                    +6*n\n",
+    "                    +n_rows*n\n",
     "                    ]\n",
     "        if i == 0:\n",
     "            ax.set_ylim(0.4,0.72)\n",
@@ -289,40 +221,13 @@
     "                ax.set_title('Loss')\n",
     "        else:\n",
     "            ax.hlines((0, cb), 0, ax.get_xbound()[1], ls='--', color='black')\n",
-    "            ax.set_ylim((-0.01, 0.01*30))\n",
-    "            if n == 0:\n",
-    "                ax.set_title(f'Constraint: {group_names[i-1]}')\n",
-    "            else:\n",
-    "                ax.tick_params(bottom=False)\n",
-    "\n",
-    "            \n",
-    "# for n, (alg_name, c) in enumerate([\n",
-    "#     ('SGD','unconstrained'),\n",
-    "#     ('TorchSSLALM','abs_diff_pr'),\n",
-    "#     ('TorchSSG','abs_diff_pr')\n",
-    "#     ]):\n",
-    "\n",
-    "#     alg = f\"{alg_name}__{c}__{cb}\"\n",
-    "#     data = data_test[alg]\n",
-    "#     if 'time_r' not in data.columns:\n",
-    "#         _ = groupby_time(\n",
-    "#             data = data,\n",
-    "#             round_step=0.01)\n",
-    "#     cb = 0.05\n",
-    "#     if isinstance(ax, plt.Axes):\n",
-    "#         ax = [ax]\n",
-    "#     for i in range(6):\n",
-    "#         ax = f.axes[i+6*n]\n",
-    "#         if i == 0:\n",
-    "#             plot_sep(data, plot_col='f_full', x_col='time_r', idx_col='trial', ax=ax, alpha=0.5)\n",
-    "#         else:\n",
-    "#             plot_sep(data, plot_col=f'c_full{i-1}_corrected', x_col='time_r', idx_col='trial', ax=ax, alpha=0.5)"
+    "            ax.set_ylim((-0.01, 0.01*30))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hc-vision",
+   "display_name": "hc-dev",
    "language": "python",
    "name": "python3"
   },
