update readme + cosmetics

--- a/examples/fair_loss_constraint.ipynb
+++ b/examples/fair_loss_constraint.ipynb
@@ -5,7 +5,7 @@
    "id": "2d334db6",
    "metadata": {},
    "source": [
-    "In this notebook, we will expand on the **SSL-ALM** experiments from the [paper](https://arxiv.org/abs/2507.04033): *Benchmarking Stochastic Approximation Algorithms for Fairness-Constrained Training of Deep Neural Networks*.\n",
+    "In this notebook, we will expand on the **SSL-ALM** experiments from the [preprint](https://arxiv.org/abs/2507.04033): *Benchmarking Stochastic Approximation Algorithms for Fairness-Constrained Training of Deep Neural Networks*.\n",
     "\n",
     "Specifically, we will train a classifier DNN on a dataset with a binary sensitive attribute, with a constraint on the absolute difference in loss on samples belonging to those groups."
    ]
