update readme, restructure

--- a/examples/fair_loss_constraint.ipynb
+++ b/examples/fair_loss_constraint.ipynb
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from humancompatible.train.algorithms.torch import SSLALM\n",
+    "from humancompatible.train.algorithms import SSLALM\n",
     "\n",
     "m = 2\n",
     "\n",
