--- a/examples/fair_loss_constraint.ipynb
+++ b/examples/fair_loss_constraint.ipynb
@@ -670,7 +670,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hc-dev",
+   "display_name": "hc-mkl",
    "language": "python",
    "name": "python3"
   },
