update structure to remove unneeded dependencies from test runs

--- a/experiments/model_plots.ipynb
+++ b/experiments/model_plots.ipynb
@@ -14,7 +14,7 @@
     "import torch\n",
     "from torch import tensor\n",
     "from utils.load_folktables import prepare_folktables_multattr\n",
-    "from humancompatible.train.fairness.constraints.constraint_fns import *\n",
+    "from humancompatible.train.benchmark.constraints.constraint_fns import *\n",
     "from fairret.statistic import *\n",
     "from utils.network import SimpleNet"
    ]
