--- a/examples/constrained_training.ipynb
+++ b/examples/constrained_training.ipynb
@@ -82,6 +82,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4758a9f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import folktables\n",
+    "\n",
+    "ACSIncomeSexRace = folktables.BasicProblem(\n",
+    "    features=ACSIncome.features,\n",
+    "    target=\"PINCP\",\n",
+    "    target_transform=lambda x: x > 50000,\n",
+    "    group=[\"SEX\", \"RAC1P\"],\n",
+    "    preprocess=folktables.adult_filter,\n",
+    "    postprocess=lambda x: np.nan_to_num(x, -1),\n",
+    ")\n",
+    "data_source = ACSDataSource(survey_year='2018', horizon='1-Year', survey='person')\n",
+    "acs_data = data_source.get_data(states=[\"VA\"], download=True)\n",
+    "definition_df = data_source.get_definitions(download=True)\n",
+    "categories = generate_categories(features=ACSIncomeSexRace.features, definition_df=definition_df)\n",
+    "df_feat, df_labels, _ = ACSIncomeSexRace.df_to_pandas(acs_data,categories=categories, dummies=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "834e083e",
    "metadata": {},
    "outputs": [],
