--- a/experiments/model_plots.ipynb
+++ b/experiments/model_plots.ipynb
@@ -20,6 +20,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import numpy as np\n",
+    "# import pandas as pd\n",
+    "# from scipy.io.arff import loadarff\n",
+    "\n",
+    "# raw_data = loadarff('utils/raw_data/dutch_census_2001.arff')\n",
+    "# df_data = pd.DataFrame(raw_data[0])\n",
+    "# df_data"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,7 +57,7 @@
    "outputs": [],
    "source": [
     "TASK = \"income\"\n",
-    "STATE = \"OK\""
+    "STATE = \"VA\""
    ]
   },
   {
@@ -54,30 +69,24 @@
     "sens_cols=[\n",
     "    \"MAR\",\n",
     "    # \"SEX\",\n",
-    "    # 'RAC1P',\n",
+    "    #'RAC1P',\n",
     "    ]\n",
     "\n",
     "(\n",
-    "    X_train,\n",
-    "    y_train,\n",
-    "    group_ind_train,\n",
-    "    group_onehot_train,\n",
-    "    sep_group_ind_train,\n",
-    "    X_test,\n",
-    "    y_test,\n",
-    "    group_ind_test,\n",
-    "    group_onehot_test,\n",
-    "    sep_group_ind_test,\n",
+    "    (X_train, X_val, X_test),\n",
+    "    (y_train, y_val, y_test),\n",
+    "    (group_ind_train, group_ind_val, group_ind_test),\n",
+    "    (group_onehot_train, group_onehot_val, group_onehot_test),\n",
     "    group_order\n",
     ") = prepare_folktables_multattr(\n",
     "    TASK,\n",
     "    state=STATE.upper(),\n",
     "    random_state=42,\n",
     "    onehot=False,\n",
-    "    download=True,\n",
+    "    download=False,\n",
     "    sens_cols=sens_cols,\n",
-    "    binarize=[None],\n",
-    "    stratify=False,\n",
+    "    # binarize=[None],\n",
+    "    stratify=True,\n",
     ")"
    ]
   },
@@ -159,21 +168,22 @@
     "from itertools import product\n",
     "\n",
     "constraints = {\n",
-    "    # \"loss_equality\": 0.005,\n",
+    "    \"abs_loss_equality\": 0.05,\n",
     "    # \"unconstrained\": 0.005,\n",
     "    # \"unconstrained\": 0.03,\n",
-    "    \"abs_diff_pr\": 0.05,\n",
+    "    # \"abs_diff_pr\": 0.05,\n",
     "}\n",
     "\n",
     "dict_alg_names = {\n",
-    "    \"StochasticGhost\": \"Ghost\",\n",
-    "    \"SSLALM\": \"SSLALM\",\n",
+    "    \"SGD\": \"SGD\",\n",
+    "    \"SGD+Reg\": \"SGD+Reg\",\n",
     "    \"SSG\": \"SSw\",\n",
-    "    # \"SGD\": \"SGD\",\n",
-    "    \"Adam\": \"Adam\",\n",
-    "    \"fairret\": \"SGD-Fairret\",\n",
-    "    \"TorchSSLALM\": \"SSLALM\",\n",
-    "    \"TorchSSG\": \"SSG\"\n",
+    "    \"SSLALM\": \"SSLALM\",\n",
+    "    \"StochasticGhost\": \"Ghost\",\n",
+    "    # \"Adam\": \"Adam\",\n",
+    "    # \"fairret\": \"SGD-Fairret\",\n",
+    "    # \"TorchSSLALM\": \"SSLALM\",\n",
+    "    # \"TorchSSG\": \"SSG\"\n",
     "}\n",
     "\n",
     "DATASET = TASK + \"_\" + STATE\n",
@@ -234,10 +244,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = X_test_tensor\n",
+    "y = y_test_tensor\n",
+    "g = group_ind_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_statistics = make_groupwise_stats_table(\n",
+    "    X,\n",
+    "    y,\n",
+    "    loaded_models\n",
+    "    ).drop('Model',axis=1).groupby('Algorithm').agg('mean')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Train set**:"
+    "Groupwise statistics:"
    ]
   },
   {
@@ -246,28 +280,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loaded_models.sort(key=lambda x: x[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_data_stats = make_groupwise_stats_table(\n",
-    "    X_train_tensor,\n",
-    "    y_train_tensor,\n",
-    "    loaded_models\n",
-    "    ).drop('Model',axis=1).groupby('Algorithm').agg('mean')\n",
+    "# full_data_stats = make_groupwise_stats_table(\n",
+    "#     X_train_tensor,\n",
+    "#     y_train_tensor,\n",
+    "#     loaded_models\n",
+    "#     ).drop('Model',axis=1).groupby('Algorithm').agg('mean')\n",
+    "\n",
+    "# X = X_train_tensor\n",
+    "# y = y_train_tensor\n",
+    "# g = group_ind_train\n",
     "\n",
     "groupwise_stats = []\n",
+    "groupwise_stats_inv = []\n",
     "\n",
-    "for group_ind in group_ind_train:\n",
+    "for group_ind in g:\n",
     "    groupwise_stats.append(\n",
     "        make_groupwise_stats_table(\n",
-    "            X_train_tensor[group_ind],\n",
-    "            y_train_tensor[group_ind],\n",
+    "            X[group_ind],\n",
+    "            y[group_ind],\n",
+    "            loaded_models\n",
+    "        ).drop('Model',axis=1).groupby('Algorithm').agg('mean')\n",
+    "    )\n",
+    "    except_group_ind = np.delete(np.arange(len(X)), group_ind, 0)\n",
+    "    groupwise_stats_inv.append(\n",
+    "        make_groupwise_stats_table(\n",
+    "            X[except_group_ind],\n",
+    "            y[except_group_ind],\n",
     "            loaded_models\n",
     "        ).drop('Model',axis=1).groupby('Algorithm').agg('mean')\n",
     "    )"
@@ -279,86 +317,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "groupwise_dev = []\n",
-    "\n",
-    "for group_stats in groupwise_stats:\n",
-    "    diff = group_stats - full_data_stats\n",
-    "    diff = diff.add_suffix('_dev')\n",
-    "    diff['Sp'] = abs(diff['tpr_dev']) + abs(diff['fpr_dev'])\n",
-    "    diff['Ind'] = abs(diff['ppv_dev']) + abs(diff['fomr_dev'])\n",
-    "    diff['Sf'] = abs(diff['pr_dev'])\n",
-    "    diff['Ina'] = 1 - group_stats['acc']\n",
-    "    groupwise_dev.append(diff)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import pandas as pd\n",
     "stats = pd.concat(groupwise_stats, keys=group_names, names=['group'])\n",
+    "inv_stats = pd.concat(groupwise_stats_inv, keys=group_names, names=['group'])\n",
+    "sep = {}\n",
+    "sep_total = 0\n",
+    "ind = {}\n",
+    "ind_total = 0\n",
+    "sf = {}\n",
+    "sf_total = 0\n",
+    "\n",
+    "gn = [g for g in group_names]\n",
+    "\n",
+    "for group_idx, group in enumerate(gn):\n",
+    "    sep[group] = 0\n",
+    "    ind[group] = 0\n",
+    "    sf[group] = 0\n",
+    "    for alt_group in [g for g in gn if g != group]:\n",
+    "        sep[group] += abs(stats.loc[group]['tpr'] - stats.loc[alt_group]['tpr']) + abs(stats.loc[group]['fpr'] - stats.loc[alt_group]['fpr'])\n",
+    "        ind[group] += abs(stats.loc[group]['pr'] - stats.loc[alt_group]['pr'])\n",
+    "        sf[group] += abs(stats.loc[group]['ppv'] - stats.loc[alt_group]['ppv']) + abs(stats.loc[group]['fomr'] - stats.loc[alt_group]['fomr'])\n",
+    "    sep_total += sep[group]\n",
+    "    ind_total += ind[group]\n",
+    "    sf_total += sf[group]\n",
+    "\n",
+    "sep = pd.concat(sep, keys=gn, names=['group'])\n",
+    "ind = pd.concat(ind, keys=gn, names=['group'])\n",
+    "sf = pd.concat(sf, keys=gn, names=['group'])\n",
+    "\n",
+    "stats['Sp'] = sep\n",
+    "stats['Ind'] = ind\n",
+    "stats['Sf'] = sf\n",
+    "\n",
+    "# stats['Sp']= abs(stats['tpr'] - inv_stats['tpr']) + abs(stats['fpr'] - inv_stats['fpr'])\n",
+    "# stats['Ind'] = abs(stats['pr'] - inv_stats['pr'])\n",
+    "# stats['Sf'] = abs(stats['ppv'] - inv_stats['ppv']) + abs(stats['fomr'] - inv_stats['fomr'])\n",
+    "\n",
+    "stats['Ina'] = 1 - stats['acc']\n",
     "stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "con = pd.concat(groupwise_dev, keys=group_names, names=['group'])\n",
-    "con"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from itertools import combinations\n",
-    "import pandas as pd\n",
-    "\n",
-    "bin_dfs = []\n",
-    "\n",
-    "for group_idx_1, group_idx_2 in list(combinations(group_ind_train, 2)):\n",
-    "    X_train_1, y_train_1 = X_train_tensor[group_idx_1], y_train_tensor[group_idx_1]\n",
-    "    X_train_2, y_train_2 = X_train_tensor[group_idx_2], y_train_tensor[group_idx_2]\n",
-    "    table = make_pairwise_constraint_stats_table(\n",
-    "        X_train_1, y_train_1, X_train_2, y_train_2, loaded_models\n",
-    "    )\n",
-    "    table.index = table.Algorithm.apply(lambda x: dict_alg_names[x.split(\"_\")[0]])\n",
-    "    table.drop(\"Algorithm\", axis=1, inplace=True)\n",
-    "    bin_dfs.append(table)\n",
-    "    \n",
-    "df_train = pd.concat(bin_dfs, axis=0, keys=range(len(bin_dfs)), names=[\"constraint\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df = aggregate_model_stats_table(\n",
-    "    df_train, \"mean\", agg_cols=[\"constraint\", \"Algorithm\"]\n",
-    ")\n",
-    "train_df_std = aggregate_model_stats_table(\n",
-    "    df_train, [\"mean\", \"std\"], agg_cols=[\"constraint\", \"Algorithm\"]\n",
-    ")\n",
-    "train_df_std.drop(\"Algname\", axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df"
    ]
   },
   {
@@ -375,11 +371,15 @@
    "outputs": [],
    "source": [
     "from utils.plotting import spider_line\n",
-    "cr = con.reset_index()\n",
-    "cr_alg = cr[cr['Algorithm'] == 'TorchSSLALM_0.05']\n",
-    "cr_alg.index = cr_alg.group\n",
+    "cr = stats.loc['Mar']\n",
+    "# cr = sts\n",
+    "# cr = stats.groupby('Algorithm').mean()\n",
+    "# cr_alg = cr[cr['Algorithm'] == 'SGD_0.05']\n",
+    "# cr_alg.index = cr_alg.group\n",
     "\n",
-    "f = spider_line(cr_alg, yticks=[0,0.1,0.2,0.35])"
+    "f = spider_line(cr, yticks=np.arange(0, 0.5, 0.1))\n",
+    "f.set_figwidth(10)\n",
+    "f.set_figheight(10)"
    ]
   },
   {
@@ -395,14 +395,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions_by_alg = {alg: {} for alg in set([model_name.split(\"_\")[0] for model_name, _ in loaded_models])}\n",
+    "# X = X_train_tensor\n",
+    "# y = y_train_tensor\n",
     "\n",
+    "X = X_test_tensor\n",
+    "y = y_test_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_by_alg = {alg: {} for alg in set([model_name.split(\"_\")[0] for model_name, _ in loaded_models])}\n",
     "\n",
     "for i, group in enumerate(group_ind_test):\n",
     "    for model_name, model in loaded_models:\n",
     "        alg = model_name.split(\"_\")[0]\n",
     "\n",
-    "        preds = torch.nn.functional.sigmoid(model(X_test_tensor[group])).detach().numpy().squeeze()\n",
+    "        preds = torch.nn.functional.sigmoid(model(X[group])).detach().numpy().squeeze()\n",
     "        try:\n",
     "            predictions_by_alg[alg][i].append(preds)\n",
     "        except:\n",
@@ -441,7 +453,7 @@
    "source": [
     "import seaborn as sns\n",
     "\n",
-    "fig, axs = plt.subplots(nrows=1, ncols=3)\n",
+    "fig, axs = plt.subplots(nrows=1, ncols=5)\n",
     "\n",
     "for i, (alg, predictions) in enumerate(pred_dfs.items()):\n",
     "    ax = axs[i]\n",
@@ -481,7 +493,7 @@
    "source": [
     "**We choose one model per algorithm to make some useful plots**\n",
     "\n",
-    "For now, choose the model with the highest mean AUC:"
+    "Choose the model with the highest mean AUC:"
    ]
   },
   {
@@ -490,7 +502,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train.index.get_level_values('Algorithm').unique()"
+    "from sklearn.metrics import auc, roc_curve, accuracy_score\n",
+    "\n",
+    "# X = X_train_tensor\n",
+    "# y = y_train_tensor\n",
+    "\n",
+    "X = X_test_tensor\n",
+    "y = y_test_tensor\n",
+    "\n",
+    "alg_list = [str.join(\"\", model_name.split(\"_trial\")[:-1]) for model_name, _ in loaded_models]\n",
+    "# model_df = pd.DataFrame(columns=['alg', 'auc', 'model'])\n",
+    "model_df = []\n",
+    "for model_name, model in loaded_models:\n",
+    "    alg = str.join(\"\", model_name.split(\"_trial\")[:-1])\n",
+    "    with torch.inference_mode():\n",
+    "        preds = model(X)\n",
+    "    fpr, tpr, thresholds = roc_curve(\n",
+    "        y.cpu().numpy(), preds.cpu().numpy()\n",
+    "    )\n",
+    "    model_auc = auc(fpr, tpr)\n",
+    "    model_df.append({'alg': alg, 'auc': model_auc, 'model': model})\n",
+    "\n",
+    "model_df = pd.DataFrame(model_df)"
    ]
   },
   {
@@ -499,22 +532,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_by = \"AUC_M\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_models = {}\n",
-    "algs = df_train.index.get_level_values('Algorithm').unique()\n",
-    "for alg in algs:\n",
-    "    alg_df = df_train.xs(alg, level=1).reset_index()\n",
-    "    best_model_name = alg_df[['Model', select_by]].groupby('Model').mean()[select_by].idxmax()\n",
-    "    model = [(name, model) for name, model in loaded_models if name == best_model_name][0]\n",
-    "    best_models[alg] = model"
+    "models_idx = model_df.groupby('alg')['auc'].idxmax()\n",
+    "best_models = model_df.iloc[models_idx][['alg', 'model']]\n",
+    "best_models.index = best_models['alg']\n",
+    "best_models.drop('alg', inplace=True, axis=1)\n",
+    "best_models = best_models['model'].to_dict()"
    ]
   },
   {
@@ -556,7 +578,7 @@
     "    )\n",
     "\n",
     "\n",
-    "for alg, (model_name, model) in best_models.items():\n",
+    "for alg, model in best_models.items():\n",
     "    f = plt.figure()\n",
     "    f.set_figwidth(10)\n",
     "    f.set_figheight(10)\n",
@@ -572,65 +594,6 @@
     "            ax.plot([0, 1], [0, 1], linestyle=\"--\", color=\"gray\", label=\"Random Classifier\")\n",
     "            ax.set_xlabel(\"False Positive Rate\", fontsize=24)\n",
     "            ax.set_ylabel(\"True Positive Rate\", fontsize=24)\n",
-    "            ax.legend()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TNR-FNR plot**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to generate predictions and plot ROC curve\n",
-    "def plot_roc_curve_nr(ax, predictions, targets, sensitive_value):\n",
-    "    # Convert PyTorch tensors to numpy arrays\n",
-    "    # predictions = predictions.detach().numpy()\n",
-    "    # targets = targets.numpy()\n",
-    "\n",
-    "    # Compute ROC curve and area under the curve\n",
-    "    fpr, tpr, thresholds = roc_curve(targets, predictions)\n",
-    "    fnr = 1 - tpr\n",
-    "    tnr = 1 - fpr\n",
-    "    roc_auc = auc(tnr, fnr)\n",
-    "    # Plot ROC curve\n",
-    "    ax.plot(tnr, fnr, label=f\"Sensitive={sensitive_value}, AUC = {roc_auc:.2f}\")\n",
-    "\n",
-    "    tnr_minus_fnr = tnr - fnr\n",
-    "\n",
-    "    # Find the threshold that maximizes tnr - fnr difference\n",
-    "    optimal_threshold_index = np.argmax(tnr_minus_fnr)\n",
-    "    optimal_threshold = thresholds[optimal_threshold_index]\n",
-    "    ax.scatter(\n",
-    "        fnr[optimal_threshold_index],\n",
-    "        tpr[optimal_threshold_index],\n",
-    "        # c=\"blue\" if sensitive_value == sensitive_value_0 else \"red\",\n",
-    "        label=f\"Optimal Threshold {sensitive_value} {optimal_threshold:.2f}\",\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "for alg, (model_name, model) in best_models.items():\n",
-    "    f = plt.figure()\n",
-    "    f.set_figwidth(10)\n",
-    "    f.set_figheight(10)\n",
-    "    ax = f.subplots()\n",
-    "    ax.set_title(alg)\n",
-    "    with torch.inference_mode():\n",
-    "        for i,group in enumerate(group_ind_test):\n",
-    "            predictions = model(X_test_tensor[group])\n",
-    "            # Plot ROC for sensitive attribute A=0\n",
-    "            plot_roc_curve_nr(\n",
-    "                ax, predictions, y_test[group], sensitive_value=i\n",
-    "            )\n",
-    "            ax.plot([0, 1], [0, 1], linestyle=\"--\", color=\"gray\", label=\"Random Classifier\")\n",
-    "            ax.set_xlabel(\"False Negative Rate\", fontsize=24)\n",
-    "            ax.set_ylabel(\"True Negative Rate\", fontsize=24)\n",
     "            ax.legend()"
    ]
   }
