--- a/examples/constrained_training.ipynb
+++ b/examples/constrained_training.ipynb
@@ -148,19 +148,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 0, loss: 0.5694593191146851, constraints: [0.89587426 0.25025123 0.9878887  0.44957635 0.86241883 0.09738564], dual: [0.15030187 0.         0.14999658 0.         0.18364772 0.        ]\n",
-      "Epoch: 1, loss: 0.453301340341568, constraints: [0.99988097 0.6606871  0.9999979  0.6280859  0.9998277  0.1964759 ], dual: [0.20589583 0.         0.23529063 0.         0.2624111  0.        ]\n",
-      "Epoch: 2, loss: 0.43187829852104187, constraints: [0.9995572  0.95886993 0.99950653 0.6864315  0.9994035  0.19895783], dual: [0.24521847 0.02820662 0.29254287 0.         0.31646594 0.        ]\n",
-      "Epoch: 3, loss: 0.42199623584747314, constraints: [0.99928725 0.9997964  0.99919224 0.7160128  0.999049   0.19681479], dual: [0.27254534 0.03845146 0.33845595 0.         0.35972592 0.        ]\n",
-      "Epoch: 4, loss: 0.41544073820114136, constraints: [0.99918455 0.99972284 0.9989307  0.7367323  0.9987696  0.19203664], dual: [0.2950047  0.0444206  0.37791267 0.         0.3970336  0.        ]\n",
-      "Epoch: 5, loss: 0.4099986255168915, constraints: [0.9991817  0.9996902  0.998767   0.7513592  0.9986485  0.19046412], dual: [0.31481963 0.04880307 0.41249096 0.         0.43186986 0.        ]\n",
-      "Epoch: 6, loss: 0.4062756896018982, constraints: [0.99913144 0.9996218  0.998517   0.7630046  0.9984386  0.18768747], dual: [0.3330037  0.05201924 0.44317317 0.         0.46148083 0.        ]\n",
-      "Epoch: 7, loss: 0.402717262506485, constraints: [0.9991421  0.9996246  0.9983952  0.7718013  0.9982189  0.19023128], dual: [0.34993297 0.05478717 0.4737111  0.         0.48723552 0.        ]\n",
-      "Epoch: 8, loss: 0.399619460105896, constraints: [0.9992015  0.9996048  0.9981917  0.7802549  0.9980732  0.19156948], dual: [0.36521938 0.05703552 0.4997017  0.         0.5111091  0.        ]\n",
-      "Epoch: 9, loss: 0.3969198763370514, constraints: [0.99931073 0.9996082  0.998102   0.7871431  0.997933   0.19070879], dual: [0.38012612 0.05895312 0.52385277 0.         0.5340677  0.        ]\n"
+     "ename": "TypeError",
+     "evalue": "add_(): argument 'other' (position 1) must be Tensor, not NoneType",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 22\u001b[0m\n\u001b[1;32m     17\u001b[0m norm_viol\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# for the Lagrangian family of algorithms, dual_step requires the index of constraint and the value as arguments\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# to update the corresponding dual multiplier\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# in a stochastic-constrained setting, this estimate needs (in theory) to be independent from the one used to update dual parameters\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# in practice, it makes little difference\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m \u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdual_step\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mc_val\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnorm_viol\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msqueeze\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[1;32m     24\u001b[0m c_log[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mappend(norm\u001b[38;5;241m.\u001b[39mdetach()\u001b[38;5;241m.\u001b[39mnumpy())\n",
+      "File \u001b[0;32m~/humancompatible/humancompatible-train/humancompatible/train/algorithms/ssl_alm.py:156\u001b[0m, in \u001b[0;36mSSLALM.dual_step\u001b[0;34m(self, i, c_val)\u001b[0m\n\u001b[1;32m    153\u001b[0m _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_init_group(group, params, grads, l_term_grads, aug_term_grads, smoothing)\n\u001b[1;32m    155\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m p_i, p \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(params):\n\u001b[0;32m--> 156\u001b[0m     \u001b[43ml_term_grads\u001b[49m\u001b[43m[\u001b[49m\u001b[43mp_i\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_\u001b[49m\u001b[43m(\u001b[49m\u001b[43mp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrad\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_dual_vars\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    157\u001b[0m     aug_term_grads[p_i]\u001b[38;5;241m.\u001b[39madd_(p\u001b[38;5;241m.\u001b[39mgrad, alpha\u001b[38;5;241m=\u001b[39mc_val\u001b[38;5;241m.\u001b[39mitem())\n",
+      "\u001b[0;31mTypeError\u001b[0m: add_(): argument 'other' (position 1) must be Tensor, not NoneType"
      ]
     }
    ],
@@ -185,8 +181,8 @@
     "            # for the Lagrangian family of algorithms, dual_step requires the index of constraint and the value as arguments\n",
     "            # to update the corresponding dual multiplier\n",
     "            # in a stochastic-constrained setting, this estimate needs (in theory) to be independent from the one used to update dual parameters\n",
-    "            # in practice, it makes little difference  \n",
-    "            optimizer.dual_step(i, c_val=norm_viol)\n",
+    "            # in practice, it makes little difference\n",
+    "            optimizer.dual_step(i, c_val=norm_viol.squeeze())\n",
     "            optimizer.zero_grad()\n",
     "            c_log[-1].append(norm.detach().numpy())\n",
     "        \n",
@@ -1013,7 +1009,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hc-opt-dep-test",
+   "display_name": "hc-dev",
    "language": "python",
    "name": "python3"
   },
