rename algorithms to optim, small alg updates

--- a/examples/fair_loss_constraint.ipynb
+++ b/examples/fair_loss_constraint.ipynb
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from humancompatible.train.algorithms import SSLALM\n",
+    "from humancompatible.train.optim import SSLALM\n",
     "\n",
     "m = 2\n",
     "\n",
@@ -683,7 +683,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
