--- a/examples/learn_DAG.ipynb
+++ b/examples/learn_DAG.ipynb
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from humancompatible.train.algorithms import SSLALM_Adam\n",
+    "from humancompatible.train.optim import SSLALM_Adam\n",
     "\n",
     "A = torch.nn.Parameter(torch.randn(D, D, device=DEVICE) / math.sqrt(D))\n",
     "\n",
@@ -351,7 +351,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
