--- a/examples/learn_pde.ipynb
+++ b/examples/learn_pde.ipynb
@@ -387,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from humancompatible.train.algorithms import SSLALM, SSLALM_Adam\n",
+    "from humancompatible.train.optim import SSLALM, SSLALM_Adam\n",
     "\n",
     "model = torch.nn.Sequential(\n",
     "    torch.nn.Linear(2, 48),\n",
@@ -698,7 +698,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
