--- a/examples/benchmarking.ipynb
+++ b/examples/benchmarking.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "644329e5",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "90968f7d",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cceb213f",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f365156f",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6328efd1",
    "metadata": {},
    "outputs": [],
@@ -382,19 +382,19 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
+     "ename": "ImportError",
+     "evalue": "cannot import name 'SSLALM_Adam' from 'humancompatible.train.algorithms' (/home/bosadam/Documents/Doktorat/train/humancompatible/train/algorithms/__init__.py)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[62], line 24\u001b[0m\n\u001b[1;32m     21\u001b[0m m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mlist\u001b[39m(model\u001b[38;5;241m.\u001b[39mparameters()))\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# create the SSLALM optimizer\u001b[39;00m\n\u001b[0;32m---> 24\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m \u001b[43mssl_alm\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[43m    \u001b[49m\u001b[43mparams\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparameters\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[43m    \u001b[49m\u001b[43mm\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mm\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     27\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.001\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     28\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdual_lr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.1\u001b[39;49m\n\u001b[1;32m     29\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# bounds for the constraints: norm of each weight matrix should be <= 1\u001b[39;00m\n\u001b[1;32m     32\u001b[0m constraint_bounds \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1.\u001b[39m]\u001b[38;5;241m*\u001b[39mm\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mhumancompatible\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtrain\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01malgorithms\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SSLALM_Adam \n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# set the same seed for fair comparisons\u001b[39;00m\n\u001b[1;32m      4\u001b[0m torch\u001b[38;5;241m.\u001b[39mmanual_seed(seed_n)\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'SSLALM_Adam' from 'humancompatible.train.algorithms' (/home/bosadam/Documents/Doktorat/train/humancompatible/train/algorithms/__init__.py)"
      ]
     }
    ],
    "source": [
-    "from humancompatible.train.optim import SSLALM_Adam \n",
+    "from humancompatible.train.algorithms import \n",
     "\n",
     "# set the same seed for fair comparisons\n",
     "torch.manual_seed(seed_n)\n",
